@@ -3,9 +3,10 @@ package_group=com.gr8pefish.ironbackpacks
 
 major_version=2
 minor_version=0
-build_number=1
+build_number=2
+
 mc_version=1.8.9
-forge_version=latest
+forge_version=recommended
 jei_version=2.22.4.106
 
 curse_id=227049
